--- a/mods/vsroleplayclasses/vsroleplayclasses.csproj
+++ b/mods/vsroleplayclasses/vsroleplayclasses.csproj
@@ -70,6 +70,7 @@
     <Content Include="assets\vsroleplayclasses\textures\item\abilityscroll.png" />
     <Content Include="modinfo.json" />
     <Content Include="assets\game\patches\entity-add-experience-behavior.json" />
+    <Compile Include="src\SpellEffectType.cs" />
     <Compile Include="src\Time.cs" />
     <Compile Include="src\RuneOfPowerItem.cs" />
     <Compile Include="src\LinguaMagica.cs" />
