--- a/mods/vsroleplayclasses/vsroleplayclasses.csproj
+++ b/mods/vsroleplayclasses/vsroleplayclasses.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\WorldLimits.cs" />
     <Content Include="assets\game\config\characterclasses.json" />
     <Content Include="assets\game\lang\en.json" />
     <Content Include="assets\vsroleplayclasses\textures\item\abilitybook.png" />
@@ -70,7 +71,12 @@
     <Content Include="assets\vsroleplayclasses\textures\item\abilityscroll.png" />
     <Content Include="modinfo.json" />
     <Content Include="assets\game\patches\entity-add-experience-behavior.json" />
+    <Compile Include="src\EntityUtils.cs" />
+    <Compile Include="src\Extensions\PlayerUtils.cs" />
+    <Compile Include="src\StatType.cs" />
     <Compile Include="src\SpellEffectType.cs" />
+    <Compile Include="src\Systems\SystemMana.cs" />
+    <Compile Include="src\Systems\SystemStatistics.cs" />
     <Compile Include="src\Time.cs" />
     <Compile Include="src\RuneOfPowerItem.cs" />
     <Compile Include="src\LinguaMagica.cs" />
