--- a/mods/vsroleplayclasses/vsroleplayclasses.csproj
+++ b/mods/vsroleplayclasses/vsroleplayclasses.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\Items\InkwellEmptyItem.cs" />
+    <Compile Include="src\Items\RunicInkwellItem.cs" />
     <Compile Include="src\Items\RunicInkwellAndQuillItem.cs" />
     <Compile Include="src\Items\InkwellAndQuillItem.cs" />
     <Compile Include="src\Items\InkwellItem.cs" />
@@ -74,10 +75,10 @@
     <Content Include="assets\vsroleplayclasses\textures\block\liquid\alumhoney.png" />
     <Content Include="assets\vsroleplayclasses\textures\block\liquid\runicinkportion.png" />
     <Content Include="assets\vsroleplayclasses\textures\block\liquid\inkportion.png" />
+    <Content Include="assets\vsroleplayclasses\textures\item\inkwellandquillempty.png" />
     <Content Include="assets\vsroleplayclasses\textures\item\inkwellempty.png" />
     <Content Include="assets\vsroleplayclasses\textures\item\runicinkwellandquill.png" />
     <Content Include="assets\vsroleplayclasses\textures\item\inkwellandquill.png" />
-    <Content Include="assets\vsroleplayclasses\textures\item\inkwell.png" />
     <Content Include="assets\vsroleplayclasses\textures\item\abilitybook.png" />
     <Content Include="assets\vsroleplayclasses\textures\item\crushedpower.png" />
     <Content Include="assets\vsroleplayclasses\textures\item\runeofpower.png" />
@@ -114,22 +115,24 @@
     <Folder Include="assets\vsroleplayclasses\patches\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="assets\vsroleplayclasses\itemtypes\inkwellandquillempty.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\inkwellempty.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\liquid\alumhoney.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\liquid\runicinkportion.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\liquid\inkportion.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\runicinkwellandquill.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\inkwellandquill.json" />
-    <None Include="assets\vsroleplayclasses\itemtypes\inkwell.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\crushedpower.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\runeofpower.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\abilityscroll.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\abilitybook.json" />
     <None Include="assets\vsroleplayclasses\recipes\barrel\alumhoney.json" />
     <None Include="assets\vsroleplayclasses\recipes\barrel\inkportion.json" />
-    <None Include="assets\vsroleplayclasses\recipes\barrel\inkwell.json" />
+    <None Include="assets\vsroleplayclasses\recipes\barrel\runicinkwellandquill.json" />
+    <None Include="assets\vsroleplayclasses\recipes\barrel\inkwellandquill.json" />
     <None Include="assets\vsroleplayclasses\recipes\barrel\runicinkportion.json" />
     <None Include="assets\vsroleplayclasses\recipes\clayforming\inkwellempty.json" />
+    <None Include="assets\vsroleplayclasses\recipes\grid\inkwellandquillempty.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
