--- a/mods/vsroleplayclasses/vsroleplayclasses.csproj
+++ b/mods/vsroleplayclasses/vsroleplayclasses.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\Items\InkwellAndQuillEmptyItem.cs" />
     <Compile Include="src\Items\InkwellEmptyItem.cs" />
     <Compile Include="src\MagicPowerSlot.cs" />
     <Compile Include="src\Items\RunicInkwellItem.cs" />
@@ -122,10 +123,10 @@
     <Content Include="assets\vsroleplayclasses\config\characterclassesitems.json" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="assets\vsroleplayclasses\lang\" />
     <Folder Include="assets\vsroleplayclasses\patches\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="assets\game\patches\survival-blocktypes-wood-pan.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\inkwellandquillempty.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\inkwellempty.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\liquid\alumhoney.json" />
@@ -137,12 +138,15 @@
     <None Include="assets\vsroleplayclasses\itemtypes\runeofpower.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\abilityscroll.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\abilitybook.json" />
+    <None Include="assets\vsroleplayclasses\lang\en.json" />
     <None Include="assets\vsroleplayclasses\recipes\barrel\alumhoney.json" />
     <None Include="assets\vsroleplayclasses\recipes\barrel\inkportion.json" />
     <None Include="assets\vsroleplayclasses\recipes\barrel\runicinkwellandquill.json" />
     <None Include="assets\vsroleplayclasses\recipes\barrel\inkwellandquill.json" />
     <None Include="assets\vsroleplayclasses\recipes\barrel\runicinkportion.json" />
     <None Include="assets\vsroleplayclasses\recipes\clayforming\inkwellempty.json" />
+    <None Include="assets\vsroleplayclasses\recipes\grid\abilitybook.json" />
+    <None Include="assets\vsroleplayclasses\recipes\grid\crushedpower.json" />
     <None Include="assets\vsroleplayclasses\recipes\grid\inkwellandquillempty.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
@@ -152,4 +156,9 @@ copy "$(TargetPath)" "$(ProjectDir)"
 copy "$(TargetDir)\$(TargetName).pdb" "$(ProjectDir)" 
     </PostBuildEvent>
   </PropertyGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties assets_4game_4patches_4survival-blocktypes-wood-pan_1json__JsonSchema="https://bitbucket.org/atlassianlabs/atlascode/raw/main/resources/schemas/pipelines-schema.json" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
