casting progress bar

--- a/mods/vsroleplayclasses/vsroleplayclasses.csproj
+++ b/mods/vsroleplayclasses/vsroleplayclasses.csproj
@@ -75,6 +75,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\AbilityTools.cs" />
+    <Compile Include="src\Behaviors\EntityBehaviorCasting.cs" />
+    <Compile Include="src\Gui\HudAbility.cs" />
     <Compile Include="src\ItemSlotScroll.cs" />
     <Compile Include="src\Packets\CastAbilityInMemoryPositionPacket.cs" />
     <Compile Include="src\Systems\SystemCharacterMemorisationInventory.cs" />
@@ -140,6 +142,7 @@
     <Folder Include="assets\vsroleplayclasses\patches\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\game\patches\entity-add-casting-behavior.json" />
     <None Include="assets\game\patches\survival-blocktypes-wood-pan.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\inkwellandquillempty.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\inkwellempty.json" />
