patch weapons to match their skill type

--- a/mods/vsroleplayclasses/vsroleplayclasses.csproj
+++ b/mods/vsroleplayclasses/vsroleplayclasses.csproj
@@ -79,6 +79,7 @@
     <Compile Include="src\ActiveSpellEffectHudEntry.cs" />
     <Compile Include="src\AdventureClass.cs" />
     <Compile Include="src\AdventureClassTools.cs" />
+    <Compile Include="src\Behaviors\EntityBehaviorWeapon.cs" />
     <Compile Include="src\Behaviors\EntityBehaviorCasting.cs" />
     <Compile Include="src\Behaviors\EntityBehaviorSkillable.cs" />
     <Compile Include="src\Behaviors\EntityBehaviorInteruptable.cs" />
@@ -104,6 +105,7 @@
     <Compile Include="src\Packets\SpendPendingExperiencePacket.cs" />
     <Compile Include="src\Packets\UpdateActiveEffectsHudPacket.cs" />
     <Compile Include="src\SkillType.cs" />
+    <Compile Include="src\Systems\EntityAgentOnDamageReplacerMod.cs" />
     <Compile Include="src\Systems\SystemSkills.cs" />
     <Compile Include="src\Systems\SystemCompassInventory.cs" />
     <Compile Include="src\Systems\SystemCharacterMemorisationInventory.cs" />
@@ -438,6 +440,7 @@
     <Content Include="assets\game\patches\entity-add-statistics-behavior.json" />
     <Content Include="assets\game\patches\entity-add-interuptable-behavior.json" />
     <Content Include="assets\game\patches\entity-add-skillable-behavior.json" />
+    <Content Include="assets\game\patches\entity-add-weapon-behavior.json" />
     <None Include="assets\game\patches\survival-blocktypes-wood-pan.json" />
     <None Include="assets\vsroleplayclasses\entities\air\magicprojectile.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\inkwellandquillempty.json" />
