--- a/mods/vsroleplayclasses/vsroleplayclasses.csproj
+++ b/mods/vsroleplayclasses/vsroleplayclasses.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="src\ActiveSpellEffect.cs" />
     <Compile Include="src\AbilityTools.cs" />
+    <Compile Include="src\MemorisedAbilityHudEntry.cs" />
     <Compile Include="src\ActiveSpellEffectHudEntry.cs" />
     <Compile Include="src\AdventureClass.cs" />
     <Compile Include="src\AdventureClassTools.cs" />
@@ -95,6 +96,7 @@
     <Compile Include="src\Gui\GuiDialogSkills.cs" />
     <Compile Include="src\Gui\GuiDialogExperience.cs" />
     <Compile Include="src\Gui\GuiDialogCompass.cs" />
+    <Compile Include="src\Gui\HudMemorisedSpells.cs" />
     <Compile Include="src\Gui\HudActiveEffects.cs" />
     <Compile Include="src\Gui\HudAbility.cs" />
     <Compile Include="src\InventoryCompass.cs" />
@@ -105,6 +107,8 @@
     <Compile Include="src\Packets\ClientRequestFinishCastingPacket.cs" />
     <Compile Include="src\Packets\CastAbilityInMemoryPositionPacket.cs" />
     <Compile Include="src\Packets\SpendPendingExperiencePacket.cs" />
+    <Compile Include="src\Packets\ClientRequestUpdateMemorisedSpellsPacket.cs" />
+    <Compile Include="src\Packets\UpdateMemorisedSpellsPacket.cs" />
     <Compile Include="src\Packets\UpdateActiveEffectsHudPacket.cs" />
     <Compile Include="src\Randomise.cs" />
     <Compile Include="src\SkillType.cs" />
@@ -152,6 +156,7 @@
     <Content Include="assets\vsroleplayclasses\textures\block\liquid\alumhoney.png" />
     <Content Include="assets\vsroleplayclasses\textures\block\liquid\runicinkportion.png" />
     <Content Include="assets\vsroleplayclasses\textures\block\liquid\inkportion.png" />
+    <Content Include="assets\vsroleplayclasses\textures\gui\spells\-1.png" />
     <Content Include="assets\vsroleplayclasses\textures\gui\spells\0.png" />
     <Content Include="assets\vsroleplayclasses\textures\gui\spells\1.png" />
     <Content Include="assets\vsroleplayclasses\textures\gui\spells\10.png" />
